style: fix overlap

--- a/packages/raystack/v1/components/slider/slider.module.css
+++ b/packages/raystack/v1/components/slider/slider.module.css
@@ -7,6 +7,7 @@
   height: var(--rs-space-8);
   touch-action: none;
   user-select: none;
+  padding: 0 12px;
 }
 
 .track {
@@ -15,7 +16,7 @@
   height: var(--rs-space-1);
   background-color: var(--rs-color-background-neutral-secondary);
   border-radius: var(--rs-radius-full);
-  margin: 0 12px;
+  margin: 0;
 }
 
 .range {
